Manually open org.mockito/org.mockito.internal to java.instrument