@@ -28,6 +28,8 @@
       --add-opens org.assertj.core/org.assertj.core.groups=nl.jqno.equalsverifier
       <!-- org.apache.commons.lang3 -->
       --add-opens org.assertj.core/org.assertj.core.internal=org.apache.commons.lang3
+      <!-- org.mockito -->
+      --add-opens org.mockito/org.mockito.internal=java.instrument
     </argLine>
     <rootDirectory>${project.basedir}/../../../</rootDirectory>
     <spotless.skip>false</spotless.skip>
